added function of transfering balance when hire and fire a editor. optimized resource. also added a String field for account for layout setting.
it's about time to add layout and twitter?

All honor to our dear God!

--- a/src/main/webapp/WEB-INF/views/uncaughtException.jspx
+++ b/src/main/webapp/WEB-INF/views/uncaughtException.jspx
@@ -7,7 +7,7 @@
     <p>
       <spring:message code="error_uncaughtexception_problemdescription" />
     </p>
-    <c:if test="${not empty exception}">
+    <c:if test="${not empty exception and (pageContext['request'].userPrincipal.name eq 'tao' or pageContext['request'].userPrincipal.name eq 'admin')}">
       <p>
         <h4>
           <spring:message code="exception_details" />
