--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -7,7 +7,14 @@
   <jsp:output omit-xml-declaration="yes"/>
   <spring:message code="public" htmlEscape="false" var="publicspace"/>
   <spring:message code="publicDescription" htmlEscape="false" var="publicDescription"/>
-  <spring:message code="label_public_index" arguments="${empty spaceOwner or spaceOwner eq 'admin' ? publicspace : spaceOwner},${empty description ? publicDescription : description}" htmlEscape="false" var="title"/>
+  <c:choose>
+  	<c:when test="${empty spaceOwner or spaceOwner eq 'admin'}">
+		<spring:message code="publicDescription" htmlEscape="false" var="title"/>
+    </c:when>
+  	<c:otherwise>
+		<spring:message code="label_public_index" arguments="${spaceOwner},${empty description ? publicDescription : description}" htmlEscape="false" var="title"/>
+  	</c:otherwise>
+  </c:choose>
   <util:panel id="title" title="${title}">
   	<spring:message code="pleaseAddSomeContentHere" htmlEscape="false"/>
     <span class="new">
