--- a/src/main/webapp/WEB-INF/views/public/list_publisher.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_publisher.jspx
@@ -30,6 +30,10 @@
 		        <spring:message arguments="${typeName}" code="global_menu_new" var="add_message" htmlEscape="false" />
 		        <img alt="remove this guy from my employee list" src="${delete_img_url}" title="click this button to remove this guy from my employee list." />
 		      </a>
+		      ${" "}
+		  </c:if>
+		  <c:if test="${not empty balance and not empty notfireable and not empty nothireable}">
+		 	 <spring:message code="label_public_balance" arguments="${balance}" htmlEscape="false"/>
 		  </c:if>
 	   </span>
 	</util:panel>
