--- a/src/main/webapp/WEB-INF/views/useraccounts/list.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/list.jspx
@@ -10,6 +10,7 @@
             <table:column id="c_com_aeiou_bigbang_domain_UserAccount_description" property="description" z="dQO1Tf4jmA8VJ8R9ouMY27ubENs="/>
             <table:column id="c_com_aeiou_bigbang_domain_UserAccount_listento" property="listento" z="wMSIun/19yw14uGXfJp/mBIyrxc="/>
             <table:column id="c_com_aeiou_bigbang_domain_UserAccount_price" property="price" z="mB44SKubJcVYUFggywNGAdSjQkQ="/>
+            <table:column id="c_com_aeiou_bigbang_domain_UserAccount_balance" property="balance" z="?"/>
         </table:table>
     </page:list>
 </div>
