--- a/src/main/webapp/WEB-INF/views/useraccounts/update.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/update.jspx
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
+<div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" 
+	xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:c="http://java.sun.com/jsp/jstl/core" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:update id="fu_com_aeiou_bigbang_domain_UserAccount" modelAttribute="userAccount" path="/useraccounts" versionField="Version" z="0F8idzGSdxooYhrvOCp6vO/PSkM=">
@@ -10,5 +11,8 @@
         <field:select field="listento" id="c_com_aeiou_bigbang_domain_UserAccount_listento" itemValue="id" items="${useraccounts}" multiple="true" path="/useraccounts" z="IQaeFE4bTXuS6y9TJhi8R2WV+84="/>
         <field:input field="price" id="c_com_aeiou_bigbang_domain_UserAccount_price" max="9" min="0" required="true" z="NNXWMQKTCd/lmw4Q/AvzmkSI5cs="/>
         <field:input field="layout" id="c_com_aeiou_bigbang_domain_UserAccount_layout" z="DZP4oppDs9iitXlz6zafXsQ860o="/>
+        <c:if test="${pageContext['request'].userPrincipal.name eq 'admin'}">            
+        	<field:input field="balance" id="c_com_aeiou_bigbang_domain_UserAccount_balance" required="true" z="iGBZ2hYbTCMyVVJ+abO7tKBIjIM="/>
+		</c:if>
     </form:update>
 </div>
