--- a/src/main/webapp/WEB-INF/views/public/list_more.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_more.jspx
@@ -7,7 +7,14 @@
   <jsp:output omit-xml-declaration="yes"/>
   <spring:message code="public" htmlEscape="false" var="publicspace"/>
   <spring:message code="publicDescription" htmlEscape="false" var="publicDescription"/>
-  <spring:message code="label_public_index" arguments="${empty spaceOwner or spaceOwner eq 'admin' ? publicspace : spaceOwner},${empty description ? publicDescription : description}" htmlEscape="false" var="title"/>
+  <c:choose>
+  	<c:when test="${empty spaceOwner or spaceOwner eq 'admin'}">
+		<spring:message code="publicDescription" htmlEscape="false" var="title"/>
+    </c:when>
+  	<c:otherwise>
+		<spring:message code="label_public_index" arguments="${spaceOwner},${empty description ? publicDescription : description}" htmlEscape="false" var="title"/>
+  	</c:otherwise>
+  </c:choose>
   <util:panel id="title" title="${title}">
   	<spring:message code="pleaseAddSomeContentHere" htmlEscape="false"/>
     <span class="new">
@@ -25,7 +32,7 @@
   </util:panel>
   <br/>
   <c:set var="tagsize" value="${bigTags.size()}" scope="request" />
-    <page:contentPane id="pl_com_aeiou_bigbang_domain_Content" items="${contents}" label="${label}" z="hnfyfk7YNdTBdBza4/mViLT4aos=">
+    <page:contentPane id="pl_com_aeiou_bigbang_domain_Content" items="${contents}" label="${tag}" z="hnfyfk7YNdTBdBza4/mViLT4aos=">
         <table:contentlist data="${contents}" id="l_com_aeiou_bigbang_domain_Content" tagId="${tagId}" path="/contents" spaceOwner="${spaceOwner}" publisher="${publisher}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
             <table:column id="c_com_aeiou_bigbang_domain_Content_title" property="title" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
             <table:column id="c_com_aeiou_bigbang_domain_Content_commonBigTag" property="commonBigTag" z="054H0l7u1U7D14UvHgTdwqh3sy4="/>
