--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -29,12 +29,12 @@
       </a>
     </span>
   </util:panel>
-  <c:set var="tagsize" value="${bigTags.size()}" scope="request" />
+  <!-- c:set var="tagsize" value="${bigTags.size()}" scope="request" /> -->
   <table class="tWireless" style="margin-top: 13px;"><tr>
   	<td class="tWireless nopaddingleft" valign="top">
-	  	<c:forEach items="${contents}" var="content" begin="0" end="${tagsize/2 - 1}" varStatus="num">
-		  <page:contentPane id="contentlist${(num.count - 1)}" items="${content}" label="${bigTags[num.count - 1]}"  z="hnfyfk7YNdTBdBza4/mViLT4aos=">
-		    <table:contentbox data="${content}" id="l_com_aeiou_bigbang_domain_Content" path="/public" tagId="${tagIds[num.count - 1]}" spaceOwner="${spaceOwner}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
+	  	<c:forEach items="${contentsLeft}" var="content" varStatus="num">			<!-- don't need these two params anymore: begin="0" end="${tagsize/2 - 1}" -->
+		  <page:contentPane id="contentlistleft${(num.count - 1)}" items="${content}" label="${bigTagsLeft[num.count - 1]}"  z="hnfyfk7YNdTBdBza4/mViLT4aos=">
+		    <table:contentbox data="${content}" id="l_com_aeiou_bigbang_domain_Content" path="/public" tagId="${tagIdsLeft[num.count - 1]}" spaceOwner="${spaceOwner}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
 		        <table:column id="c_com_aeiou_bigbang_domain_Content_title" property="title" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
 		        <table:column id="c_com_aeiou_bigbang_domain_Content_sourceURL" property="sourceURL" z="s58Apv8PkSRyKzF8JLn0IqIrTNc="/>
 		        <table:column id="c_com_aeiou_bigbang_domain_Content_publisher" property="publisher" z="JoA6rckfK+Yqfnqa1ScNuIgPZBg="/>
@@ -44,9 +44,9 @@
 	  </c:forEach>
   	</td>
   	<td class="tWireless nopaddingright" valign="top" >
-  		<c:forEach items="${contents}" var="content" begin="${tagsize/2}" varStatus="num">
-		  <page:contentPane id="contentlist${(num.count - 1 + tagsize/2)}" items="${content}" label="${bigTags[num.count - 1 + tagsize/2]}"  z="hnfyfk7YNdTBdBza4/mViLT4aos=">
-		    <table:contentbox data="${content}" id="l_com_aeiou_bigbang_domain_Content" path="/public" tagId="${tagIds[num.count - 1 + tagsize/2]}" spaceOwner="${spaceOwner}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
+  		<c:forEach items="${contentsRight}" var="content" varStatus="num">
+		  <page:contentPane id="contentlistright${(num.count - 1)}" items="${content}" label="${bigTagsRight[num.count - 1]}"  z="hnfyfk7YNdTBdBza4/mViLT4aos=">
+		    <table:contentbox data="${content}" id="l_com_aeiou_bigbang_domain_Content" path="/public" tagId="${tagIdsRight[num.count - 1]}" spaceOwner="${spaceOwner}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
 		        <table:column id="c_com_aeiou_bigbang_domain_Content_title" property="title" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
 		        <table:column id="c_com_aeiou_bigbang_domain_Content_sourceURL" property="sourceURL" z="s58Apv8PkSRyKzF8JLn0IqIrTNc="/>
 		        <table:column id="c_com_aeiou_bigbang_domain_Content_publisher" property="publisher" z="JoA6rckfK+Yqfnqa1ScNuIgPZBg="/>
