--- a/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
+<div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" 
+     xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" 
+     xmlns:spring="http://www.springframework.org/tags" xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <form:create id="fc_com_aeiou_bigbang_domain_UserAccount" modelAttribute="userAccount" path="/useraccounts" render="${empty dependencies}" z="tmtENoRkRhGzN/x9fx+ElhU2zbE=">
-        <field:input field="name" id="c_com_aeiou_bigbang_domain_UserAccount_name" min="2" required="true" z="ivL1uj01/Ogki4rPE5I3PdFQud0="/>
-        <field:input field="password" id="c_com_aeiou_bigbang_domain_UserAccount_password" min="4" required="true" type="password" z="user-managed"/>
-        <field:input field="email" id="c_com_aeiou_bigbang_domain_UserAccount_email" validationMessageCode="field_invalid_email" z="ceq1TElqZB2WL71Mrwy7m1UNg0o="/>
-        <field:input field="description" id="c_com_aeiou_bigbang_domain_UserAccount_description" z="IHXfmTHIFzCFUY3TARmFZXUT838="/>
-        <field:input field="price" id="c_com_aeiou_bigbang_domain_UserAccount_price" max="9" min="0" required="true" z="NNXWMQKTCd/lmw4Q/AvzmkSI5cs="/>
-        <field:input field="balance" id="c_com_aeiou_bigbang_domain_UserAccount_balance" disabled="true" required="true" z="iGBZ2hYbTCMyVVJ+abO7tKBIjIM="/>
-    </form:create>
-    <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_UserAccount" render="${not empty dependencies}" z="pRXKbS1jO/JZHS6yO3aerzXp/Tc="/>
+    <spring:message code="security_login_userlicence" var="title2" htmlEscape="false" />
+    <table class="tWireless"><tr>
+  	  <td class="tWireless nopaddingleft" valign="top" width="350px">
+	    <form:create id="fc_com_aeiou_bigbang_domain_UserAccount" modelAttribute="userAccount" path="/useraccounts" render="${empty dependencies}" z="tmtENoRkRhGzN/x9fx+ElhU2zbE=">
+	        <field:input field="name" id="c_com_aeiou_bigbang_domain_UserAccount_name" min="2" required="true" z="ivL1uj01/Ogki4rPE5I3PdFQud0="/>
+	        <field:input field="password" id="c_com_aeiou_bigbang_domain_UserAccount_password" min="4" required="true" type="password" z="user-managed"/>
+	        <field:input field="email" id="c_com_aeiou_bigbang_domain_UserAccount_email" validationMessageCode="field_invalid_email" z="ceq1TElqZB2WL71Mrwy7m1UNg0o="/>
+	        <field:input field="description" id="c_com_aeiou_bigbang_domain_UserAccount_description" z="IHXfmTHIFzCFUY3TARmFZXUT838="/>
+	        <field:input field="price" id="c_com_aeiou_bigbang_domain_UserAccount_price" max="9" min="0" required="true" z="NNXWMQKTCd/lmw4Q/AvzmkSI5cs="/>
+	        <field:input field="balance" id="c_com_aeiou_bigbang_domain_UserAccount_balance" disabled="true" required="true" z="iGBZ2hYbTCMyVVJ+abO7tKBIjIM="/>
+	    </form:create>
+	    <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_UserAccount" render="${not empty dependencies}" z="pRXKbS1jO/JZHS6yO3aerzXp/Tc="/>
+	 </td>
+	 <td class="tWireless nopaddingleft" valign="top">
+		<util:panel id="title2" title="${title2}">
+		   <p>
+		        <!--  spring:message code="security_signup_message" />-->
+		        This is for new user, the following is our aggreement :   
+		   </p>
+		   <p>1. you password and infomation is not safe here, and not safe anywhere in the internet.</p>
+		   <p>2. we might have to give up protecting your right when we are muscled by the government</p>
+		   <p>3.You have to protect youself if you edited anything which will cause anyone unhappy. </p>
+		   <p>if you agree all of them, please click the agree link at the end.</p>
+		   <p>in the coming page, select an unused username, set up your password and contact email, then go :-)</p>
+		   <br/>
+		</util:panel>
+	 </td>
+	</tr></table>
 </div>
