--- a/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
@@ -7,14 +7,14 @@
     <spring:message code="security_login_userlicence" var="title2" htmlEscape="false" />
     <table class="tWireless"><tr>
   	  <td class="tWireless nopaddingleft" valign="top" width="350px">
-	    <form:create id="fc_com_aeiou_bigbang_domain_UserAccount" modelAttribute="userAccount" path="/useraccounts" render="${empty dependencies}" z="tmtENoRkRhGzN/x9fx+ElhU2zbE=">
+	    <form:Bigcreate id="fc_com_aeiou_bigbang_domain_UserAccount" modelAttribute="userAccount" info_error="${create_error}" path="/useraccounts" render="${empty dependencies}" z="tmtENoRkRhGzN/x9fx+ElhU2zbE=">
 	        <field:input field="name" id="c_com_aeiou_bigbang_domain_UserAccount_name" min="2" required="true" z="ivL1uj01/Ogki4rPE5I3PdFQud0="/>
 	        <field:input field="password" id="c_com_aeiou_bigbang_domain_UserAccount_password" min="4" required="true" type="password" z="user-managed"/>
 	        <field:input field="email" id="c_com_aeiou_bigbang_domain_UserAccount_email" validationMessageCode="field_invalid_email" z="ceq1TElqZB2WL71Mrwy7m1UNg0o="/>
 	        <field:input field="description" id="c_com_aeiou_bigbang_domain_UserAccount_description" z="IHXfmTHIFzCFUY3TARmFZXUT838="/>
 	        <field:input field="price" id="c_com_aeiou_bigbang_domain_UserAccount_price" max="9" min="0" required="true" z="NNXWMQKTCd/lmw4Q/AvzmkSI5cs="/>
 	        <field:input field="balance" id="c_com_aeiou_bigbang_domain_UserAccount_balance" disabled="true" required="true" z="iGBZ2hYbTCMyVVJ+abO7tKBIjIM="/>
-	    </form:create>
+	    </form:Bigcreate>
 	    <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_UserAccount" render="${not empty dependencies}" z="pRXKbS1jO/JZHS6yO3aerzXp/Tc="/>
 	 </td>
 	 <td class="tWireless nopaddingleft" valign="top">
