--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -23,7 +23,7 @@
       </spring:url>
       <a href="${create_url}">
         <spring:message code="contributeContent" htmlEscape="false"/>
-        <spring:url value="/resources/images/add.png" var="create_img_url" />
+        <spring:url value="/resources/images/addcontent.png" var="create_img_url" />
         <spring:message arguments="${typeName}" code="global_menu_new" var="add_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(add_message)}" src="${create_img_url}" title="${fn:escapeXml(add_message)}" />
       </a>
