--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -67,6 +67,18 @@
       </a>
       
   	  <util:theme/>
+  	  
+  	  <span class="new">
+      <spring:url value="/function_coming_soon" var="write_url">
+        <spring:param name="form" />
+      </spring:url>
+      <a href="${write_url}" onclick="JavaScript:alert('Once upon a time, there lived a princess and a frog. They both got married and lived happily ever after. The end..... Oops, this function is coming soon.')">
+        <spring:message code="contributeTwitter" htmlEscape="false"/>
+        <spring:url value="/resources/images/addnote.png" var="write_img_url" />
+        <spring:message arguments="${typeName}" code="global_menu_newnote" var="add_message" htmlEscape="false" />
+        <img alt="${fn:escapeXml(add_message)}" src="${write_img_url}" title="${fn:escapeXml(add_message)}" />
+      </a>
+    </span>
     </c:if>
     
   </util:panel>
