--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -7,7 +7,7 @@ body,div,td {
 }
 
 body {
-	background-color: #fff;
+	background-color: #555555;
 	text-align: center;
 }
 
@@ -84,10 +84,9 @@ body {
 }
 
 #footer {
-	background:#fff;
 	border:none;
-	margin-top:15px;
-	border-top:1px solid #999999;
+	margin-top:0px;
+	border-top:0px solid #999999;
 }
 
 .new {
@@ -192,7 +191,6 @@ a img {
 }
 
 tr:nth-child(odd) {
-	background-color: #FFFFFF;
 }
 
 tr:nth-child(even) {
@@ -228,7 +226,6 @@ ul li {
 /* table elements */
 
 table {
-	background: #EEEEEE;
 	margin: 2px 0 0 0;
 	border: 1px solid #BBBBBB;
 	border-collapse: collapse;
@@ -388,8 +385,12 @@ fieldset th {
 	border: 0px;
 }
 .nopaddingleft{
+	padding-top: 0px;
 	padding-left: 0px;
+	padding-buttom: 0px;
 }
 .nopaddingright{
+	padding-top: 0px;
 	padding-right: 0px;
+	padding-buttom: 0px;
 }
