fixed the bug that can not login with cookie, the root cause was shouldn't use getContentPath to get the path string, should use just a "\" as path string, because on localhost, the default value of path will be set as "\bigbang\resource\", if use getContentPath, it will be "\bigbang". While, on rhcloud, if use getContentPath, will get a string like "\resource" that kill my 2 days ):

--- a/src/main/webapp/WEB-INF/views/login.jspx
+++ b/src/main/webapp/WEB-INF/views/login.jspx
@@ -59,8 +59,8 @@
           <script type="text/javascript">
 			dojo.addOnLoad(function() {
 			  dojo.require("dojo.cookie");
-			  var rememberedName = dojo.cookie('login_nameJiangTao');
-			  var rememberedPassword = dojo.cookie('login_passwordJiangTao');
+			  var rememberedName = dojo.cookie('login_name');
+			  var rememberedPassword = dojo.cookie('login_password');
 			  //alert("name is: " + rememberedName + "  password: " + rememberedPassword);
 			  if (rememberedName != null) {
 			    dojo.byId('j_rememberme').setAttribute('checked', 'true');
