formatted by Roo

--- a/src/main/webapp/WEB-INF/views/twitters/create.jspx
+++ b/src/main/webapp/WEB-INF/views/twitters/create.jspx
@@ -3,7 +3,7 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_com_aeiou_bigbang_domain_Twitter" modelAttribute="twitter" path="/twitters" render="${empty dependencies}" z="C8PXUylrKuANxmZEPg1IxGp6i7c=">
-        <field:textarea field="twitent" id="c_com_aeiou_bigbang_domain_Twitter_twitent" required="true" z="WiZ/XyYqHpfraTJ4ChYDwMdMhVo="/>
+        <field:textarea field="twitent" id="c_com_aeiou_bigbang_domain_Twitter_twitent" required="true" z="user-managed"/>
         <field:datetime dateTimePattern="${twitter_twitdate_date_format}" field="twitDate" id="c_com_aeiou_bigbang_domain_Twitter_twitDate" required="true" z="RtLPo9UnRiHc0ybqItC4AqnRkw4="/>
         <field:select field="publisher" id="c_com_aeiou_bigbang_domain_Twitter_publisher" itemValue="id" items="${useraccounts}" path="/useraccounts" required="true" z="X87ZwFVlxa5uM0I8SRgxWxXqjLI="/>
     </form:create>
