--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -17,7 +17,7 @@
   </c:choose>
   <util:Bigpanel id="title" title="${title}">
   	<spring:message code="pleaseAddSomeContentHere" htmlEscape="false"/>
-    <span class="new">
+    <span>
       <spring:url value="/contents" var="create_url">
         <spring:param name="form" />
       </spring:url>
@@ -26,6 +26,18 @@
         <spring:url value="/resources/images/addcontent.png" var="create_img_url" />
         <spring:message arguments="${typeName}" code="global_menu_new" var="add_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(add_message)}" src="${create_img_url}" title="${fn:escapeXml(add_message)}" />
+      </a>
+    </span>
+    <span class="new">
+  	  <spring:message code="pleaseAddSomeTwitterHere" htmlEscape="false"/>
+      <spring:url value="/twitters" var="write_url">
+        <spring:param name="form" />
+      </spring:url>
+      <a href="${write_url}">
+        <spring:message code="contributeTwitter" htmlEscape="false"/>
+        <spring:url value="/resources/images/addnote.png" var="write_img_url" />
+        <spring:message arguments="${typeName}" code="global_menu_newnote" var="add_message" htmlEscape="false" />
+        <img alt="${fn:escapeXml(add_message)}" src="${write_img_url}" title="${fn:escapeXml(add_message)}" />
       </a>
     </span>
     <c:if test="${empty maxPages and fn:toLowerCase(pageContext['request'].userPrincipal.name) eq fn:toLowerCase(spaceOwner)}">
@@ -68,17 +80,6 @@
       
   	  <util:theme/>
   	  
-  	  <span class="new">
-      <spring:url value="/twitters" var="write_url">
-        <spring:param name="form" />
-      </spring:url>
-      <a href="${write_url}">
-        <spring:message code="contributeTwitter" htmlEscape="false"/>
-        <spring:url value="/resources/images/addnote.png" var="write_img_url" />
-        <spring:message arguments="${typeName}" code="global_menu_newnote" var="add_message" htmlEscape="false" />
-        <img alt="${fn:escapeXml(add_message)}" src="${write_img_url}" title="${fn:escapeXml(add_message)}" />
-      </a>
-    </span>
     </c:if>
     
   </util:Bigpanel>
