--- a/src/main/webapp/WEB-INF/views/twitters/create.jspx
+++ b/src/main/webapp/WEB-INF/views/twitters/create.jspx
@@ -3,9 +3,12 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_com_aeiou_bigbang_domain_Twitter" modelAttribute="twitter" path="/twitters" render="${empty dependencies}" z="C8PXUylrKuANxmZEPg1IxGp6i7c=">
-        <field:textarea field="twitent" id="c_com_aeiou_bigbang_domain_Twitter_twitent" required="true" z="user-managed"/>
-        <field:datetime dateTimePattern="${twitter_twitdate_date_format}" field="twitDate" id="c_com_aeiou_bigbang_domain_Twitter_twitDate" required="true" z="RtLPo9UnRiHc0ybqItC4AqnRkw4="/>
-        <field:select field="publisher" id="c_com_aeiou_bigbang_domain_Twitter_publisher" itemValue="id" items="${useraccounts}" path="/useraccounts" required="true" z="X87ZwFVlxa5uM0I8SRgxWxXqjLI="/>
+        <field:input field="twtitle" id="c_com_aeiou_bigbang_domain_Twitter_twtitle" z="/V/4pAH3rrkLN/hSaWVYngTahFk="/>
+        <field:editor field="twitent" id="c_com_aeiou_bigbang_domain_Twitter_twitent" required="true" z="user-managed"/>
+        <!-- <field:datetime dateTimePattern="${twitter_twitdate_date_format}" field="twitDate" id="c_com_aeiou_bigbang_domain_Twitter_twitDate" required="true" z="RtLPo9UnRiHc0ybqItC4AqnRkw4="/>
+        <field:select field="publisher" id="c_com_aeiou_bigbang_domain_Twitter_publisher" itemValue="id" items="${useraccounts}" path="/useraccounts" required="true" z="X87ZwFVlxa5uM0I8SRgxWxXqjLI="/>-->
+        <field:selectPriTag field="twittertag" id="c_com_aeiou_bigbang_domain_Twitter_twittertag" itemValue="id" items="${mytags}" path="/bigtags" z="user-managed"/>
+        <field:select field="authority" id="c_com_aeiou_bigbang_domain_Twitter_authority" itemValue="id" items="${authorities}" path="/bigtags" z="user-managed"/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_Twitter" render="${not empty dependencies}" z="dzxPr9kKNBiA08OmcIzvCdjYP8c="/>
 </div>
