--- a/src/main/webapp/WEB-INF/views/contents/show.jspx
+++ b/src/main/webapp/WEB-INF/views/contents/show.jspx
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
+<div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <page:show id="ps_com_aeiou_bigbang_domain_Content" object="${content}" path="/contents" z="6R2k30kacHNZyW87/m60Hmz64xw=">
@@ -7,7 +7,9 @@
         <field:display field="sourceURL" id="s_com_aeiou_bigbang_domain_Content_sourceURL" object="${content}" z="+HsVhm9Xu1zua8vJFU/krXxHFFg="/>
         <!-- <field:display field="conentCache" id="s_com_aeiou_bigbang_domain_Content_conentCache" object="${content}" z="9IBFHV9Z4gUjQm25cCPf1NibIbw="/> -->
         <field:Bigdisplay field="commonBigTag" id="s_com_aeiou_bigbang_domain_Content_commonBigTag" object="${content}" z="user-managed"/>
-        <field:Bigdisplay field="uncommonBigTag" id="s_com_aeiou_bigbang_domain_Content_uncommonBigTag" object="${content}" z="user-managed"/>
+        <c:if test="${content.uncommonBigTag != null}">
+          <field:Bigdisplay field="uncommonBigTag" id="s_com_aeiou_bigbang_domain_Content_uncommonBigTag" object="${content}" z="user-managed"/>
+        </c:if>
         <field:display field="authority" id="s_com_aeiou_bigbang_domain_Content_authority" object="${content}" z="NXij6Y7D7z9rqayfqqzb64H9uvI="/>
         <field:Bigdisplay field="publisher" id="s_com_aeiou_bigbang_domain_Content_publisher" object="${content}" z="user-managed"/>
     </page:show>
