--- a/src/main/webapp/WEB-INF/views/public/list_publisher.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_publisher.jspx
@@ -15,7 +15,6 @@
 		      <a href="${hire_url}">
 		        <spring:message code="label_public_hiresomeone" htmlEscape="false"/>
 		        <spring:url value="/resources/images/add.png" var="add_img_url" />
-		        <spring:message arguments="${typeName}" code="global_menu_new" var="add_message" htmlEscape="false" />
 		        <img alt="add this guy to my employee list" src="${add_img_url}" title="click this button to add this guy to my employee list." />
 		      </a>
 		      ${" "}
@@ -27,13 +26,21 @@
 		      <a href="${fire_url}">
 		        <spring:message code="label_public_firesomeone" htmlEscape="false"/>
 		        <spring:url value="/resources/images/delete.png" var="delete_img_url" />
-		        <spring:message arguments="${typeName}" code="global_menu_new" var="add_message" htmlEscape="false" />
 		        <img alt="remove this guy from my employee list" src="${delete_img_url}" title="click this button to remove this guy from my employee list." />
 		      </a>
 		      ${" "}
 		  </c:if>
 		  <c:if test="${not empty balance and not empty notfireable and not empty nothireable}">
 		 	 <spring:message code="label_public_balance" arguments="${balance}" htmlEscape="false"/>
+		      ${" "}
+		  </c:if>
+		  <c:if test="${empty notfireable or empty nothireable}">
+		  	  <spring:url value="/${publisher}" var="home"/>
+	    	  <a href="${home}">
+			    <spring:message code="button_gotohome" arguments="${publisher}" htmlEscape="false"/>
+			    <spring:url value="/resources/images/home.png" var="home_img_url" />
+			    <img alt="go visit space" src="${home_img_url}" title="click this button to visit the space." />
+			  </a>
 		  </c:if>
 	   </span>
 	</util:panel>
